Fix Nova bottom navigation and expand 0.3.7 intelligence (#973)
* Keep Nova navigation above Android system controls

* Apply Nova system-bar-safe theme

* Bump Nova to 0.3.7

* Expand Nova natural-language feature routing

* Add Nova daily brief and contextual knowledge follow-ups

* Cover Nova enhanced feature routing

* Extend Nova conversation contract for new features

* Fix Nova contract test Java compatibility

* Scope Android 15 edge-to-edge opt-out to API 35

* Add API 35 Nova edge-to-edge theme override